# ship-wasm-npm

./: README.md
.github/workflows/: deploy-page.yml
npm_package/src/: index.ts
src/: CMakeLists.txt  main.cpp
web/: index.html  webpack.config.js
web/src/: index.ts
